Подправил календарь и статистику, сделал фильтры настроения, добавил кнопку применить в статистику, удалил старую отдельнуя xmal равертку для календаря

--- a/MyDiary.UI/MyDiary.UI.csproj
+++ b/MyDiary.UI/MyDiary.UI.csproj
@@ -16,4 +16,9 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Page Remove="Views\CalendarView.xaml" />
+    <Compile Remove="Views\CalendarView.xaml.cs" />
+  </ItemGroup>
+
 </Project>
