Сделал интерфейс настроек, улучшил логику навигации, доделал интерфейс создания а вместе с тем и редактирования записи, добавил страницу для создания касомной активности

--- a/MyDiary.UI/MyDiary.UI.csproj
+++ b/MyDiary.UI/MyDiary.UI.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <Page Remove="Views\CalendarView.xaml" />
     <Compile Remove="Views\CalendarView.xaml.cs" />
+    <Compile Remove="AppData.cs" />
   </ItemGroup>
 
 </Project>
